# LZSS-Archiver

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
project/: lzss.cpp  lzss.h  main.cpp
tests/: CMakeLists.txt  LZSS_Tests.cpp
